kubernetes/applications/obsidian/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obsidian
  namespace: obsidian
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: obsidian-gui.toof.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obsidian
                port:
                  number: 3000
